fix visualization on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,6 @@ canvas {
 		align-items: center;
 		overflow: auto;
 		width: 910px;
-		height: 230px;
 	}
 	
 	#area {
